--- a/styles/_settings.layout.scss
+++ b/styles/_settings.layout.scss
@@ -11,7 +11,6 @@ $desktop-width: 960px;
 
 // breakpoints
 
-$screen-xs: 320px;
-$screen-sm: 576px;
-$screen-md: 768px;
-
+$break-sm: 576px;
+$break-md: 768px;
+$break-lg: 1024px;
